[package]
name = "rust-code"
version = "0.1.0"
authors = ["Yiyuan Liu <yiyuanliu1997@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[[bin]]
name = "jump_hash"
path = "src/distributed/jump_hash.rs"